--- a/GoIT/javascript/EXAM/src/styles/partials/font.css
+++ b/GoIT/javascript/EXAM/src/styles/partials/font.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-family: 'Montserrat-Bold';
     src: url('../fonts/Montserrat-Bold.eot'); 
     src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
@@ -17,4 +17,37 @@
     src: url('../fonts/Roboto-Light.eot'); 
     src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Light.ttf') format('truetype');
+}
+*/
+@font-face {
+    font-family: 'Montserrat-Regular';
+    src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+    src: url('../fonts/Montserrat-Regular.eot');
+    src: url('../fonts/Montserrat-Regular.woff') format('woff'),
+         url('../fonts/Montserrat-Regular.ttf') format('truetype'),
+         url('../fonts/Montserrat-Regular.svg') format('svg');
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat-Bold';
+    src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
+    src: url('../fonts/Montserrat-Bold.eot');
+    src: url('../fonts/Montserrat-Bold.woff') format('woff'),
+         url('../fonts/Montserrat-Bold.ttf') format('truetype'),
+         url('../fonts/Montserrat-Bold.svg') format('svg');
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Roboto-Light';
+    src: url('../fonts/Roboto-Light.ttf') format('truetype');
+    src: url('../fonts/Roboto-Light.eot');
+    src: url('../fonts/Roboto-Light.woff') format('woff'),
+         url('../fonts/Roboto-Light.ttf') format('truetype'),
+         url('../fonts/Roboto-Light.svg') format('svg');
+    font-style: normal;
+    font-weight: normal;
 }
