--- a/GoIT/javascript/EXAM/src/styles/partials/style.scss
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.scss
@@ -55,7 +55,9 @@ header {
   color: white;
   text-align: center;
   line-height: 32px;
-
+  &:hover {
+    color: #ff4e50;
+  }
 }
 .log__button--up{
   margin-left: 0.5%;
@@ -66,6 +68,10 @@ header {
   -khtml-border-radius: 20px; /* KHTML */
   border-radius: 20px; /* CSS3 */
   behavior: url(PIE/PIE.htc);/* учим IE border-radius */
+  &:hover {
+    color: #ff4e50;
+    border: 2px solid #ff4e50;
+  }
 }
 h1 {
   width: 180px;
@@ -114,6 +120,14 @@ h3 {
   behavior: url(PIE/PIE.htc); /* учим IE border-radius */
   letter-spacing: 0.5px;
   background-color: #ff4e50;
+  &:hover{
+    height: 36px;
+    width: 276px;
+    background-color: white;
+    border: 2px solid #ff4e50;
+    color: #ff4e50;
+    line-height: 36px;
+  }
 }
 .title{
   width: 90%;
@@ -200,6 +214,14 @@ h3 {
   letter-spacing: 1.7px;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
+  &:hover{
+    width: 66px;
+    height: 16px;
+    border: 2px solid #ff4e50;
+    background-color: white;
+    color: #ff4e50;
+    line-height: 18px;
+  }
 }
 .step__title{
   margin-top: 16px;
@@ -294,6 +316,14 @@ h3 {
   line-height: 35px;
   text-align: center;
   color: #ff4e50;
+  &:hover{
+    width: 280px;
+    height: 39px;
+    line-height: 39px;
+    background-color: #ff4e50;
+    color: white;
+    border: none;
+  }
 }
 /*DISCOVER HOLIDAY
 /*MASONRY*/
@@ -441,6 +471,10 @@ h3 {
   height: 40px;
   margin-top: 38px;
   line-height: 40px;
+  &:hover{
+    height: 36px;
+    width: 220px;
+  };
 }
 .title{
   margin-top: 95px;
@@ -532,6 +566,9 @@ h3 {
 .parthners__link{
   margin-top: 565px;
   width: 190px;
+  &:hover{
+    width: 194px;
+  }
 }
 .holiday{
   clear: both;
@@ -579,6 +616,9 @@ h3 {
   float: right;
   margin-top: 0;
   width: 160px;
+  &:hover{
+    width: 156px;
+  }
 }
 footer{
   height: 200px;
@@ -659,6 +699,9 @@ h3 {
   margin-top: 36px;
   width: 220px;
   letter-spacing: 0;
+  &:hover{
+    width: 216px;
+  }
 }
 .title{
   margin-top: 90px;
@@ -737,6 +780,9 @@ h3 {
 .parthners__link{
   margin-top: 290px;
   width: 180px;
+  &:hover{
+    width: 184px;
+  }
 }
 .holiday{
   margin-top: 135px;
@@ -776,6 +822,9 @@ h3 {
   float: right;
   margin-top: 0;
   width: 150px;
+  &:hover{
+    width: 146px;
+  }
 }
 footer{
   height: 200px;
