--- a/GoIT/javascript/EXAM/src/styles/style.main.css
+++ b/GoIT/javascript/EXAM/src/styles/style.main.css
@@ -157,7 +157,8 @@ table {
   src: url("../fonts/Montserrat-Regular.eot");
   src: url("../fonts/Montserrat-Regular.woff") format('woff'),
          url("../fonts/Montserrat-Regular.ttf") format('truetype'),
-         url("../fonts/Montserrat-Regular.svg") format('svg');
+         url("../fonts/Montserrat-Regular.svg") format('svg'),
+         url("../fonts/Montserrat-Regular.eot?#iefix") format('embedded-opentype');
   font-style: normal;
   font-weight: normal;
 }
@@ -168,7 +169,8 @@ table {
   src: url("../fonts/Montserrat-Bold.eot");
   src: url("../fonts/Montserrat-Bold.woff") format('woff'),
          url("../fonts/Montserrat-Bold.ttf") format('truetype'),
-         url("../fonts/Montserrat-Bold.svg") format('svg');
+         url("../fonts/Montserrat-Bold.svg") format('svg').
+         url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype');
   font-style: normal;
   font-weight: normal;
 }
@@ -179,7 +181,8 @@ table {
   src: url("../fonts/Roboto-Light.eot");
   src: url("../fonts/Roboto-Light.woff") format('woff'),
          url("../fonts/Roboto-Light.ttf") format('truetype'),
-         url("../fonts/Roboto-Light.svg") format('svg');
+         url("../fonts/Roboto-Light.svg") format('svg'),
+         url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype');
   font-style: normal;
   font-weight: normal;
 }
