--- a/GoIT/javascript/EXAM/src/styles/style.main.css
+++ b/GoIT/javascript/EXAM/src/styles/style.main.css
@@ -165,12 +165,11 @@ table {
 
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
   src: url("../fonts/Montserrat-Bold.eot");
-  src: url("../fonts/Montserrat-Bold.woff") format('woff'),
-         url("../fonts/Montserrat-Bold.ttf") format('truetype'),
-         url("../fonts/Montserrat-Bold.svg") format('svg').
-         url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype');
+  src: local("Montserrat-Bold"), local("MontserratBold"),
+    url("../fonts/Montserrat-Bold.woff2") format("woff2"), 
+    url("../fonts/Montserrat-Bold.woff"), 
+    url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype');
   font-style: normal;
   font-weight: normal;
 }
