--- a/GoIT/javascript/EXAM/src/styles/partials/style.css
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.css
@@ -350,6 +350,8 @@ h3 {
   height: 100%;
   border-radius: 5px;
   behavior: url(PIE/PIE.htc); }
+  .masonry__image:hover {
+    cursor: pointer; }
 
 .title--image {
   position: absolute;
@@ -358,6 +360,29 @@ h3 {
   margin-top: -13px;
   color: white;
   z-index: 1; }
+
+.modal {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  max-width: 90%;
+  top: 320%;
+  left: 50%;
+  padding: 0;
+  transform: translateX(-50%);
+  border: 5px solid black;
+  -webkit-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
+  z-index: 3; }
+
+.modal--back {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); }
 
 .holiday__question {
   margin: 0 auto;
