--- a/GoIT/javascript/EXAM/src/styles/style.main.css
+++ b/GoIT/javascript/EXAM/src/styles/style.main.css
@@ -601,6 +601,9 @@ h3 {
   top: 320%;
   left: 50%;
   padding: 0;
+  -moz-transform: translateX(-50%);
+  -webkit-transfrom: translateX(-50%);
+  -sand-transform: translateX(-50%);
   transform: translateX(-50%);
   border: 5px solid black;
   -webkit-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
