--- a/GoIT/javascript/EXAM/src/styles/partials/style.scss
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.scss
@@ -362,11 +362,11 @@ h3 {
   z-index: 1;
 }
 .modal{
-  position: absolute;
+  position: fixed;
   width: auto;
   height: auto;
-  max-width: 90%;
-  top: 320%;
+  max-width: 60%;
+  /*top: 320%;*/
   left: 50%;
   padding: 0;
   -moz-transform: translateX(-50%);
@@ -380,15 +380,14 @@ h3 {
   z-index: 999;
 }
 .modal--back{
-  display: table;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.5);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000);
-  z-index: 998;  
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000); 
+  z-index: 3;
 }
 .holiday__question{
   margin: 0 auto;
