--- a/GoIT/javascript/EXAM/src/styles/partials/style.css
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.css
@@ -50,7 +50,11 @@ header {
   font-size: 14px;
   color: white;
   text-align: center;
-  line-height: 32px; }
+  line-height: 32px;
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s; }
   .log__button:hover {
     color: #ff4e50; }
 
@@ -67,7 +71,15 @@ header {
   border-radius: 20px;
   /* CSS3 */
   behavior: url(PIE/PIE.htc);
-  /* учим IE border-radius */ }
+  /* учим IE border-radius */
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s;
+  -webkit-transition: border 0.3s ease-out 0.1s;
+  -moz-transition: border 0.3s ease-out 0.1s;
+  -o-transition: border 0.3s ease-out 0.1s;
+  transition: border 0.3s ease-out 0.1s; }
   .log__button--up:hover {
     color: #ff4e50;
     border: 2px solid #ff4e50; }
@@ -123,7 +135,19 @@ h3 {
   behavior: url(PIE/PIE.htc);
   /* учим IE border-radius */
   letter-spacing: 0.5px;
-  background-color: #ff4e50; }
+  background-color: #ff4e50;
+  -webkit-transition: background-color 0.5s ease-out 0.5s;
+  -moz-transition: background-color 0.5s ease-out 0.5s;
+  -o-transition: background-color 0.5s ease-out 0.5s;
+  transition: background-color 0.5s ease-out 0.5s;
+  -webkit-transition: border 0.3s ease-out 0.1s;
+  -moz-transition: border 0.3s ease-out 0.1s;
+  -o-transition: border 0.3s ease-out 0.1s;
+  transition: border 0.3s ease-out 0.1s;
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s; }
   .find__link:hover {
     height: 36px;
     width: 276px;
@@ -223,7 +247,19 @@ h3 {
     border: 2px solid #ff4e50;
     background-color: white;
     color: #ff4e50;
-    line-height: 18px; }
+    line-height: 18px;
+    -webkit-transition: background-color 0.5s ease-out 0.5s;
+    -moz-transition: background-color 0.5s ease-out 0.5s;
+    -o-transition: background-color 0.5s ease-out 0.5s;
+    transition: background-color 0.5s ease-out 0.5s;
+    -webkit-transition: border 0.3s ease-out 0.1s;
+    -moz-transition: border 0.3s ease-out 0.1s;
+    -o-transition: border 0.3s ease-out 0.1s;
+    transition: border 0.3s ease-out 0.1s;
+    -webkit-transition: color 0.3s ease-out 0.1s;
+    -moz-transition: color 0.3s ease-out 0.1s;
+    -o-transition: color 0.3s ease-out 0.1s;
+    transition: color 0.3s ease-out 0.1s; }
 
 .step__title {
   margin-top: 16px;
@@ -325,7 +361,19 @@ h3 {
     line-height: 39px;
     background-color: #ff4e50;
     color: white;
-    border: none; }
+    border: none;
+    -webkit-transition: background-color 0.5s ease-out 0.5s;
+    -moz-transition: background-color 0.5s ease-out 0.5s;
+    -o-transition: background-color 0.5s ease-out 0.5s;
+    transition: background-color 0.5s ease-out 0.5s;
+    -webkit-transition: border 0.3s ease-out 0.1s;
+    -moz-transition: border 0.3s ease-out 0.1s;
+    -o-transition: border 0.3s ease-out 0.1s;
+    transition: border 0.3s ease-out 0.1s;
+    -webkit-transition: color 0.3s ease-out 0.1s;
+    -moz-transition: color 0.3s ease-out 0.1s;
+    -o-transition: color 0.3s ease-out 0.1s;
+    transition: color 0.3s ease-out 0.1s; }
 
 /*DISCOVER HOLIDAY
 /*MASONRY*/
@@ -353,6 +401,24 @@ h3 {
   .masonry__image:hover {
     cursor: pointer; }
 
+.masonry__shadow {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin-top: -122px;
+  border-radius: 5px;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000);
+  /*ie8+*/
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-transition: opacity 0.3s ease-out 0.3s;
+  -moz-transition: opacity 0.3s ease-out 0.3s;
+  -o-transition: opacity 0.3s ease-out 0.3s;
+  transition: opacity 0.3s ease-out 0.3s; }
+  .masonry__shadow:hover {
+    cursor: pointer;
+    opacity: 0; }
+
 .title--image {
   position: absolute;
   width: 100%;
@@ -366,13 +432,14 @@ h3 {
   width: auto;
   height: auto;
   max-width: 60%;
-  /*top: 320%;*/
+  max-height: 90%;
+  top: 50%;
   left: 50%;
   padding: 0;
-  -moz-transform: translateX(-50%);
-  -webkit-transfrom: translateX(-50%);
-  -sand-transform: translateX(-50%);
-  transform: translateX(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transfrom: translateX(-50%) translateY(-50%);
+  -sand-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
   border: 5px solid black;
   -webkit-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
@@ -585,6 +652,8 @@ footer {
       margin-top: 0px; }
   .masonry__item--2 {
     width: 65.5%; }
+  .masonry__shadow {
+    margin-top: -314px; }
   .title--image {
     top: 50%;
     margin-top: -13px; }
@@ -746,6 +815,8 @@ footer {
     height: 295px; }
   .masonry__item--2 {
     width: 590px; }
+  .masonry__shadow {
+    margin-top: -297px; }
   .title--image {
     top: 50%;
     margin-top: -13px; }
