--- a/GoIT/javascript/EXAM/src/styles/partials/style.scss
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.scss
@@ -1,5 +1,11 @@
 $montBold:     'Montserrat', 'Montserrat-Bold';
 $robLigt:      'Roboto', 'Roboto-Light';
+@mixin transition($e, $time-in, $time-out) {
+    -webkit-transition: $e $time-in ease-out $time-out;
+    -moz-transition: $e $time-in ease-out $time-out;
+    -o-transition: $e $time-in ease-out $time-out;
+    transition: $e $time-in ease-out $time-out;
+}
 
 /*CLEARFIX*/
 .clearfix{
@@ -55,6 +61,7 @@ header {
   color: white;
   text-align: center;
   line-height: 32px;
+  @include transition(color, 0.3s, 0.1s);
   &:hover {
     color: #ff4e50;
   }
@@ -68,6 +75,8 @@ header {
   -khtml-border-radius: 20px; /* KHTML */
   border-radius: 20px; /* CSS3 */
   behavior: url(PIE/PIE.htc);/* учим IE border-radius */
+  @include transition(color, 0.3s, 0.1s);
+  @include transition(border, 0.3s, 0.1s);
   &:hover {
     color: #ff4e50;
     border: 2px solid #ff4e50;
@@ -120,6 +129,9 @@ h3 {
   behavior: url(PIE/PIE.htc); /* учим IE border-radius */
   letter-spacing: 0.5px;
   background-color: #ff4e50;
+  @include transition(background-color, 0.5s, 0.5s);
+  @include transition(border, 0.3s, 0.1s);
+  @include transition(color, 0.3s, 0.1s);
   &:hover{
     height: 36px;
     width: 276px;
@@ -221,6 +233,9 @@ h3 {
     background-color: white;
     color: #ff4e50;
     line-height: 18px;
+    @include transition(background-color, 0.5s, 0.5s);
+    @include transition(border, 0.3s, 0.1s);
+    @include transition(color, 0.3s, 0.1s);
   }
 }
 .step__title{
@@ -323,6 +338,9 @@ h3 {
     background-color: #ff4e50;
     color: white;
     border: none;
+    @include transition(background-color, 0.5s, 0.5s);
+    @include transition(border, 0.3s, 0.1s);
+    @include transition(color, 0.3s, 0.1s);
   }
 }
 /*DISCOVER HOLIDAY
@@ -353,6 +371,21 @@ h3 {
     cursor: pointer;
   }
 }
+.masonry__shadow{
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin-top: -122px;
+  border-radius: 5px;
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000); /*ie8+*/
+  background-color: rgba(0, 0, 0, 0.5);
+  @include transition(opacity, 0.3s, 0.3s);
+  &:hover{
+    cursor: pointer;
+    opacity: 0;
+  }
+}
 .title--image{
   position: absolute;
   width: 100%;
@@ -366,13 +399,14 @@ h3 {
   width: auto;
   height: auto;
   max-width: 60%;
-  /*top: 320%;*/
+  max-height: 90%;
+  top: 50%;
   left: 50%;
   padding: 0;
-  -moz-transform: translateX(-50%);
-  -webkit-transfrom: translateX(-50%);
-  -sand-transform: translateX(-50%);
-  transform: translateX(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transfrom: translateX(-50%) translateY(-50%);
+  -sand-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
   border: 5px solid black;
   -webkit-box-shadow: 0px 0px 1px 2px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 1px 2px rgba(0,0,0,0.75);
@@ -622,6 +656,9 @@ h3 {
 .masonry__item--2{
   width: 65.5%;
 }
+.masonry__shadow{
+  margin-top: -314px;
+}
 .title--image{
   top: 50%;
   margin-top: -13px;
@@ -830,6 +867,9 @@ h3 {
 }
 .masonry__item--2{
   width: 590px;
+}
+.masonry__shadow{
+  margin-top: -297px;
 }
 .title--image{
   top: 50%;
