--- a/GoIT/javascript/EXAM/src/styles/style.main.css
+++ b/GoIT/javascript/EXAM/src/styles/style.main.css
@@ -230,6 +230,10 @@ header {
   color: white;
   text-align: center;
   line-height: 32px;
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s;
 }
 
 .log__button:hover {
@@ -250,6 +254,14 @@ header {
   /* CSS3 */
   behavior: url("PIE/PIE.htc");
   /* учим IE border-radius */
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s;
+  -webkit-transition: border 0.3s ease-out 0.1s;
+  -moz-transition: border 0.3s ease-out 0.1s;
+  -o-transition: border 0.3s ease-out 0.1s;
+  transition: border 0.3s ease-out 0.1s;
 }
 
 .log__button--up:hover {
@@ -312,6 +324,18 @@ h3 {
   /* учим IE border-radius */
   letter-spacing: 0.5px;
   background-color: #ff4e50;
+  -webkit-transition: background-color 0.5s ease-out 0.5s;
+  -moz-transition: background-color 0.5s ease-out 0.5s;
+  -o-transition: background-color 0.5s ease-out 0.5s;
+  transition: background-color 0.5s ease-out 0.5s;
+  -webkit-transition: border 0.3s ease-out 0.1s;
+  -moz-transition: border 0.3s ease-out 0.1s;
+  -o-transition: border 0.3s ease-out 0.1s;
+  transition: border 0.3s ease-out 0.1s;
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s;
 }
 
 .find__link:hover {
@@ -430,6 +454,18 @@ h3 {
   background-color: white;
   color: #ff4e50;
   line-height: 18px;
+  -webkit-transition: background-color 0.5s ease-out 0.5s;
+  -moz-transition: background-color 0.5s ease-out 0.5s;
+  -o-transition: background-color 0.5s ease-out 0.5s;
+  transition: background-color 0.5s ease-out 0.5s;
+  -webkit-transition: border 0.3s ease-out 0.1s;
+  -moz-transition: border 0.3s ease-out 0.1s;
+  -o-transition: border 0.3s ease-out 0.1s;
+  transition: border 0.3s ease-out 0.1s;
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s;
 }
 
 .step__title {
@@ -548,6 +584,18 @@ h3 {
   background-color: #ff4e50;
   color: white;
   border: none;
+  -webkit-transition: background-color 0.5s ease-out 0.5s;
+  -moz-transition: background-color 0.5s ease-out 0.5s;
+  -o-transition: background-color 0.5s ease-out 0.5s;
+  transition: background-color 0.5s ease-out 0.5s;
+  -webkit-transition: border 0.3s ease-out 0.1s;
+  -moz-transition: border 0.3s ease-out 0.1s;
+  -o-transition: border 0.3s ease-out 0.1s;
+  transition: border 0.3s ease-out 0.1s;
+  -webkit-transition: color 0.3s ease-out 0.1s;
+  -moz-transition: color 0.3s ease-out 0.1s;
+  -o-transition: color 0.3s ease-out 0.1s;
+  transition: color 0.3s ease-out 0.1s;
 }
 
 /*DISCOVER HOLIDAY
@@ -584,6 +632,27 @@ h3 {
   cursor: pointer;
 }
 
+.masonry__shadow {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin-top: -122px;
+  border-radius: 5px;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000);
+  /*ie8+*/
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-transition: opacity 0.3s ease-out 0.3s;
+  -moz-transition: opacity 0.3s ease-out 0.3s;
+  -o-transition: opacity 0.3s ease-out 0.3s;
+  transition: opacity 0.3s ease-out 0.3s;
+}
+
+.masonry__shadow:hover {
+  cursor: pointer;
+  opacity: 0;
+}
+
 .title--image {
   position: absolute;
   width: 100%;
@@ -598,13 +667,14 @@ h3 {
   width: auto;
   height: auto;
   max-width: 60%;
-  /*top: 320%;*/
+  max-height: 90%;
+  top: 50%;
   left: 50%;
   padding: 0;
-  -moz-transform: translateX(-50%);
-  -webkit-transfrom: translateX(-50%);
-  -sand-transform: translateX(-50%);
-  transform: translateX(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transfrom: translateX(-50%) translateY(-50%);
+  -sand-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
   border: 5px solid black;
   -webkit-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.75);
@@ -904,6 +974,10 @@ footer {
     width: 65.5%;
   }
 
+  .masonry__shadow {
+    margin-top: -314px;
+  }
+
   .title--image {
     top: 50%;
     margin-top: -13px;
@@ -1162,6 +1236,10 @@ footer {
 
   .masonry__item--2 {
     width: 590px;
+  }
+
+  .masonry__shadow {
+    margin-top: -297px;
   }
 
   .title--image {
