--- a/GoIT/javascript/EXAM/src/styles/partials/style.css
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.css
@@ -408,6 +408,7 @@ h3 {
   height: 100%;
   margin-top: -122px;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000);
   /*ie8+*/
   background-color: rgba(0, 0, 0, 0.5);
@@ -653,7 +654,7 @@ footer {
   .masonry__item--2 {
     width: 65.5%; }
   .masonry__shadow {
-    margin-top: -314px; }
+    margin-top: -312px; }
   .title--image {
     top: 50%;
     margin-top: -13px; }
