--- a/GoIT/javascript/EXAM/src/styles/partials/style.scss
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.scss
@@ -378,6 +378,7 @@ h3 {
   height: 100%;
   margin-top: -122px;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000); /*ie8+*/
   background-color: rgba(0, 0, 0, 0.5);
   @include transition(opacity, 0.3s, 0.3s);
@@ -657,7 +658,7 @@ h3 {
   width: 65.5%;
 }
 .masonry__shadow{
-  margin-top: -314px;
+  margin-top: -312px;
 }
 .title--image{
   top: 50%;
