--- a/my works/Skynix test/src/styles/style.main.css
+++ b/my works/Skynix test/src/styles/style.main.css
@@ -205,10 +205,10 @@ table {
 }
 
 .form__label {
-  position: relative;
   display: block;
   width: 90%;
-  height: 63px;
+  height: auto;
+  min-height: 63px;
   margin: 0 auto;
   margin-top: 18px;
   font-family: "Raleway-Regular", sans-serif;
@@ -217,37 +217,54 @@ table {
   text-align: center;
   border: 1px solid #2697f9;
   cursor: pointer;
-  z-index: 1;
 }
 
 .form__label:hover {
   background-color: #2697f9;
+  color: white;
+}
+
+.form__label--checked {
+  background-color: #2697f9;
+  color: white;
+}
+
+.form__hint {
+  position: absolute;
+  width: 75%;
+  max-width: 470px;
+  margin-top: -16px;
+  margin-left: 7%;
 }
 
 .form__hint__close {
-  position: relative;
   display: block;
   width: 32px;
   height: 32px;
-  margin-top: -16px;
-  margin-left: 10px;
   color: white;
   font-size: 20px;
   font-family: "Raleway-Light", sans-serif;
+  text-align: center;
   line-height: 32px;
   background-color: #2697f9;
   border-radius: 50%;
-  z-index: 999;
+  cursor: pointer;
+}
+
+.form__hint__close--label__checked {
+  border: 2px solid #ff5d00;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
 }
 
 .form__hint__open {
+  position: relative;
   display: none;
-  position: absolute;
-  width: 60%;
   min-height: 47px;
   max-width: 400px;
-  margin-top: -43px;
-  margin-left: 70px;
+  margin-top: -44px;
+  margin-left: 60px;
   padding: 5px;
   padding-left: 12px;
   font-family: "Raleway-Regular", sans-serif;
@@ -257,6 +274,7 @@ table {
   color: white;
   background-color: rgba(0, 139, 242, 0.6);
   border-radius: 10px;
+  z-index: 2;
 }
 
 .form__hint__open:before {
@@ -278,4 +296,77 @@ table {
   color: #ff5d00;
   background-color: white;
   border: 1px solid #ff5d00;
+}
+
+.form__submit:hover {
+  background-color: #ffa77a;
+  color: white;
+  cursor: pointer;
+  border: none;
+}
+
+.form__submit:active {
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    max-width: 1180px;
+  }
+
+  .form {
+    width: 92%;
+    margin: 0 auto;
+    margin-top: 70px;
+    border-top: 1px solid #0098fc;
+  }
+
+  .form__question {
+    width: 56%;
+    height: auto;
+    margin-top: -10px;
+    padding: 0;
+    font-size: 30px;
+    letter-spacing: 0.2px;
+    border-bottom: none;
+    background-color: white;
+  }
+
+  .form__description {
+    width: 96%;
+    margin-top: 44px;
+    margin-bottom: 30px;
+    font-size: 18px;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+  }
+
+  .form__label {
+    display: inline-block;
+    width: 47.8%;
+    margin-top: 20px;
+    margin-right: 3.1%;
+    font-size: 17px;
+  }
+
+  .form__label--right {
+    margin-right: 0;
+  }
+
+  .form__hint {
+    width: 75%;
+    max-width: 450px;
+    margin-top: -16px;
+    margin-left: 3%;
+  }
+
+  .form__submit {
+    float: right;
+    width: 48.2%;
+    margin-top: 145px;
+    font-size: 21px;
+  }
 }
