--- a/my works/Orangerea/src/styles/partials/style.scss
+++ b/my works/Orangerea/src/styles/partials/style.scss
@@ -25,7 +25,6 @@ body{
   position: absolute;
   width: 80%;
   max-width: 992px;
-  height: auto;
   max-height: 474px;
   margin: auto;
   top: 0;
@@ -86,12 +85,12 @@ body{
   }
   .wrapper{
    width: 100%;
-   height: 100%;
+   height: 660px;
+   max-width: none;
+   max-height: 1000px;
    background-color: white;
    opacity: 0.9;
    background-image: none;
-   max-width: none;
-   max-height: none;
   }
   .logo__image{
     width: 83px;
@@ -108,6 +107,7 @@ body{
   }
   .link{
     margin-top: 50px;
+    margin-bottom: 91px;
   }
 }
 @media  screen and (max-width: 320px){
