--- a/my works/Orangerea/src/styles/style.main.css
+++ b/my works/Orangerea/src/styles/style.main.css
@@ -185,7 +185,6 @@ body {
   position: absolute;
   width: 80%;
   max-width: 992px;
-  height: auto;
   max-height: 474px;
   margin: auto;
   top: 0;
@@ -252,12 +251,12 @@ body {
 
   .wrapper {
     width: 100%;
-    height: 100%;
+    height: 660px;
+    max-width: none;
+    max-height: 1000px;
     background-color: white;
     opacity: 0.9;
     background-image: none;
-    max-width: none;
-    max-height: none;
   }
 
   .logo__image {
@@ -278,6 +277,7 @@ body {
 
   .link {
     margin-top: 50px;
+    margin-bottom: 91px;
   }
 }
 
