--- a/my works/Orangerea/src/styles/partials/style.scss
+++ b/my works/Orangerea/src/styles/partials/style.scss
@@ -85,9 +85,8 @@ body{
   }
   .wrapper{
    width: 100%;
-   height: 660px;
    max-width: none;
-   max-height: 1000px;
+   max-height: none;
    background-color: white;
    opacity: 0.9;
    background-image: none;
@@ -107,7 +106,7 @@ body{
   }
   .link{
     margin-top: 50px;
-    margin-bottom: 91px;
+    margin-bottom: 70px;
   }
 }
 @media  screen and (max-width: 320px){
