--- a/my works/Orangerea/src/styles/style.main.css
+++ b/my works/Orangerea/src/styles/style.main.css
@@ -251,9 +251,8 @@ body {
 
   .wrapper {
     width: 100%;
-    height: 660px;
     max-width: none;
-    max-height: 1000px;
+    max-height: none;
     background-color: white;
     opacity: 0.9;
     background-image: none;
@@ -277,7 +276,7 @@ body {
 
   .link {
     margin-top: 50px;
-    margin-bottom: 91px;
+    margin-bottom: 70px;
   }
 }
 
