--- a/my works/Orangerea/src/styles/partials/style.css
+++ b/my works/Orangerea/src/styles/partials/style.css
@@ -10,7 +10,7 @@
     clear: both; }
 
 body {
-  background-image: url(../img/background.png);
+  background-image: url(../img/background.jpg);
   background-color: rgba(255, 255, 255, 0.3);
   background-size: cover; }
 
@@ -66,21 +66,26 @@ body {
 
 .link {
   display: block;
+  width: 224px;
   margin: 0 auto;
   margin-top: 20px;
   cursor: pointer; }
 
+.link__text {
+  display: none; }
+
 @media screen and (max-width: 376px) {
   body {
-    background-position: left;
-    background-size: auto auto; }
+    background-position: center;
+    background-size: auto; }
   .wrapper {
     width: 100%;
+    height: auto;
     max-width: none;
     max-height: none;
+    background-image: none;
     background-color: white;
-    opacity: 0.9;
-    background-image: none; }
+    opacity: 0.9; }
   .logo__image {
     width: 83px;
     height: 36px;
@@ -92,8 +97,22 @@ body {
   .description {
     max-width: 280px; }
   .link {
+    width: 224px;
+    height: 56px;
+    background-image: url(../img/link_t.svg);
     margin-top: 50px;
-    margin-bottom: 70px; } }
+    text-decoration: none; }
+  .link__object {
+    display: none; }
+  .link__text {
+    display: block;
+    font-weight: bolder;
+    font-family: 'Kelson Sans Bold', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 58px;
+    letter-spacing: 1.13px;
+    color: white; } }
 
 @media screen and (max-width: 320px) {
   .logo__image {
