--- a/my works/Orangerea/src/styles/partials/style.scss
+++ b/my works/Orangerea/src/styles/partials/style.scss
@@ -17,7 +17,7 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
   }
 }
 body{
-  background-image: url(../img/background.png);
+  background-image: url(../img/background.jpg);
   background-color: rgba(255, 255, 255, 0.3);
   background-size: cover;
 }
@@ -73,23 +73,28 @@ body{
 }
 .link{
   display: block;
+  width: 224px;
   margin: 0 auto;
   margin-top: 20px;
   cursor: pointer;
 }
+.link__text{
+  display: none;
+}
 
 @media  screen and (max-width: 376px){
   body{
-    background-position: left;
-    background-size: auto auto;
+    background-position: center;
+    background-size: auto;
   }
   .wrapper{
    width: 100%;
+   height: auto;
    max-width: none;
    max-height: none;
+   background-image: none;
    background-color: white;
    opacity: 0.9;
-   background-image: none;
   }
   .logo__image{
     width: 83px;
@@ -105,8 +110,24 @@ body{
     max-width: 280px;
   }
   .link{
+    width: 224px;
+    height: 56px;
+    background-image: url(../img/link_t.svg);
     margin-top: 50px;
-    margin-bottom: 70px;
+    text-decoration: none;
+  }
+  .link__object{
+    display: none;
+  }
+  .link__text{
+    display: block;
+    font-weight: bolder;
+    font-family: 'Kelson Sans Bold', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 58px;
+    letter-spacing: 1.13px;
+    color: white;
   }
 }
 @media  screen and (max-width: 320px){
