--- a/my works/Orangerea/src/styles/partials/style.css
+++ b/my works/Orangerea/src/styles/partials/style.css
@@ -10,7 +10,7 @@
     clear: both; }
 
 body {
-  background-image: url(../img/background.jpg);
+  background: url(../img/background.jpg) no-repeat center center fixed;
   background-color: rgba(255, 255, 255, 0.3);
   background-size: cover; }
 
@@ -75,12 +75,9 @@ body {
   display: none; }
 
 @media screen and (max-width: 376px) {
-  body {
-    background-position: center;
-    background-size: auto; }
   .wrapper {
     width: 100%;
-    height: auto;
+    height: 100vh;
     max-width: none;
     max-height: none;
     background-image: none;
