--- a/my works/Orangerea/src/styles/style.main.css
+++ b/my works/Orangerea/src/styles/style.main.css
@@ -176,7 +176,7 @@ table {
 }
 
 body {
-  background-image: url("../img/background.jpg");
+  background: url("../img/background.jpg") no-repeat center center fixed;
   background-color: rgba(255, 255, 255, 0.3);
   background-size: cover;
 }
@@ -249,14 +249,9 @@ body {
 }
 
 @media screen and (max-width: 376px) {
-  body {
-    background-position: center;
-    background-size: auto;
-  }
-
   .wrapper {
     width: 100%;
-    height: auto;
+    height: 100vh;
     max-width: none;
     max-height: none;
     background-image: none;
