--- a/my works/Orangerea/src/styles/style.main.css
+++ b/my works/Orangerea/src/styles/style.main.css
@@ -175,7 +175,12 @@ table {
   clear: both;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   background: url("../img/background.jpg") no-repeat center center fixed;
   background-color: rgba(255, 255, 255, 0.3);
   background-size: cover;
@@ -250,10 +255,12 @@ body {
 
 @media screen and (max-width: 376px) {
   .wrapper {
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
     max-width: none;
     max-height: none;
+    min-height: 100vh;
     background-image: none;
     background-color: white;
     opacity: 0.9;
@@ -279,7 +286,7 @@ body {
     width: 224px;
     height: 56px;
     background-image: url("../img/link_t.svg");
-    margin-top: 50px;
+    margin-top: 20px;
     text-decoration: none;
   }
 
