--- a/my works/Orangerea/src/styles/partials/style.css
+++ b/my works/Orangerea/src/styles/partials/style.css
@@ -68,6 +68,12 @@ body {
   text-align: center;
   line-height: 24px; }
 
+.email {
+  display: none;
+  margin: 0 auto;
+  width: 224px;
+  height: 30px; }
+
 .link {
   display: block;
   width: 224px;
@@ -99,6 +105,8 @@ body {
     line-height: 32px; }
   .description {
     max-width: 280px; }
+  .email {
+    display: block; }
   .link {
     width: 224px;
     height: 56px;
