--- a/my works/Orangerea/src/styles/style.main.css
+++ b/my works/Orangerea/src/styles/style.main.css
@@ -241,6 +241,13 @@ body {
   line-height: 24px;
 }
 
+.email {
+  display: none;
+  margin: 0 auto;
+  width: 224px;
+  height: 30px;
+}
+
 .link {
   display: block;
   width: 224px;
@@ -280,6 +287,10 @@ body {
 
   .description {
     max-width: 280px;
+  }
+
+  .email {
+    display: block;
   }
 
   .link {
