--- a/my works/Orangerea_uikit/src/styles/partials/style.scss
+++ b/my works/Orangerea_uikit/src/styles/partials/style.scss
@@ -39,11 +39,11 @@ body {
 //TEXT
 .input-text {
   display: block;
-  width: 480px;
-  height: 31px;
+  width: 465px;
+  height: 37px;
   margin: 0 auto;
-  padding-top: 25px;
-  padding-left: 18px;
+  padding-top: 19px;
+  padding-left: 15px;
   color: #524d5d;
   font-family: $KelsonL;
   font-size: 16px;
@@ -55,9 +55,14 @@ body {
 }
 .input-text:focus {
   outline: none;
+  width: 462px;
+  height: 41px;
+  padding-left: 18px;
+  padding-top: 15px;
   font-family:$KelsonL;
-  font-weight: 600;
+  font-weight: 700;
   background-color: #f7f5f7;
+  letter-spacing: 1px;
   border-bottom: 1px solid white;
 }
 //CHECKBOX
@@ -145,7 +150,7 @@ input[type=submit] {
 .svg-background{
   fill: #a46393;
 }
-.svg{
+.svg-text{
   fill: white;
   font-family: $KelsonB;
   font-size: 18px;
@@ -155,7 +160,8 @@ input[type=submit] {
   cursor: pointer;
   -moz-user-select: none;
   -khtml-user-select: none;
-  user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
 }
 .svg-background:hover{
   fill: #b977a8;
