--- a/my works/Orangerea_uikit/src/styles/style.main.css
+++ b/my works/Orangerea_uikit/src/styles/style.main.css
@@ -199,11 +199,11 @@ body {
 
 .input-text {
   display: block;
-  width: 480px;
-  height: 31px;
+  width: 465px;
+  height: 37px;
   margin: 0 auto;
-  padding-top: 25px;
-  padding-left: 18px;
+  padding-top: 19px;
+  padding-left: 15px;
   color: #524d5d;
   font-family: "Kelson Sans Light", sans-serif;
   font-size: 16px;
@@ -216,9 +216,14 @@ body {
 
 .input-text:focus {
   outline: none;
+  width: 462px;
+  height: 41px;
+  padding-left: 18px;
+  padding-top: 15px;
   font-family: "Kelson Sans Light", sans-serif;
-  font-weight: 600;
+  font-weight: 700;
   background-color: #f7f5f7;
+  letter-spacing: 1px;
   border-bottom: 1px solid white;
 }
 
@@ -318,7 +323,7 @@ input[type=submit] {
   fill: #a46393;
 }
 
-.svg {
+.svg-text {
   fill: white;
   font-family: "Kelson Sans Bold", sans-serif;
   font-size: 18px;
@@ -328,7 +333,8 @@ input[type=submit] {
   cursor: pointer;
   -moz-user-select: none;
   -khtml-user-select: none;
-  user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
 }
 
 .svg-background:hover {
