--- a/test/touch/style.css
+++ b/test/touch/style.css
@@ -3,7 +3,7 @@
   height: 300px;
   background-color: red;
 }
-@media handheld{
+@media (pointer:coarse) {  
   .block{
     background-color: green;
   }
