fixed banner for touch devices

--- a/test/OP/src/styles/out_css/touch/style.touch.css
+++ b/test/OP/src/styles/out_css/touch/style.touch.css
@@ -1,5 +1,10 @@
-a {
-  display: block; }
+.banner--touch {
+  height: auto; }
 
-a {
-  display: inline; }
+.banner__wrapper--touch {
+  width: 100%;
+  max-width: none;
+  margin: 0;
+  background-image: none;
+  background-color: white;
+  opacity: 0.9; }
