--- a/test/OP/src/styles/out_css/normal/style.css
+++ b/test/OP/src/styles/out_css/normal/style.css
@@ -10,7 +10,7 @@
     clear: both; }
 
 .banner {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: url(../../img/background.jpg) no-repeat center center fixed;
   background-size: cover; }
