--- a/test/OP/src/styles/out_scss/normal/style.scss
+++ b/test/OP/src/styles/out_scss/normal/style.scss
@@ -21,7 +21,7 @@ $textColor: #4a4a4a;
 
 //BANNER DESKTOP HD
 .banner{
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: url(../../img/background.jpg) no-repeat center center fixed;
   background-size: cover;
