--- a/test/OP/src/styles/sass/normal/banner.scss
+++ b/test/OP/src/styles/sass/normal/banner.scss
@@ -1,6 +1,6 @@
 //BANNER DESKTOP HD
 .banner{
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: url(../../img/background.jpg) no-repeat center center fixed;
   background-size: cover;
