--- a/test/OP/src/styles/style.main.css
+++ b/test/OP/src/styles/style.main.css
@@ -176,7 +176,7 @@ table {
 }
 
 .banner {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: url("../img/background.jpg") no-repeat center center fixed;
   background-size: cover;
