--- a/test/OP/src/styles/out_scss/touch/style.touch.scss
+++ b/test/OP/src/styles/out_scss/touch/style.touch.scss
@@ -1,3 +1,4 @@
+//BANNER DESKTOP HD
 .banner--touch{
   height: auto;
 }
@@ -8,4 +9,18 @@
   background-image: none;
   background-color: white;
   opacity: 0.9;
+}
+//BANNER DESKTOP
+@media screen and (max-width: 1024px){
+  .banner--touch{
+    height: auto;
+  }
+  .banner__wrapper--touch{
+    width: 100%;
+    max-width: none;
+    margin: 0;
+    background-image: none;
+    background-color: white;
+    opacity: 0.9;
+  }
 }
