--- a/test/donuts old/styles/css/testimonials.css
+++ b/test/donuts old/styles/css/testimonials.css
@@ -10,6 +10,7 @@
     clear: both; }
 
 .testimonials {
+  width: 100%;
   max-width: 1536px;
   height: 300px;
   margin: 0 auto; }
@@ -88,6 +89,7 @@
 
 .tabs__control__item {
   float: left;
+  width: 25%;
   cursor: pointer; }
 
 .tabs-checked {
@@ -96,6 +98,10 @@
   width: 96px;
   height: 0px;
   background: url(../../img/tab_fill.png) no-repeat;
+  -webkit-transition: height 500ms;
+  -moz-transition: height 500ms;
+  -ms-transition: height 500ms;
+  -o-transition: height 500ms;
   transition: height 500ms; }
 
 .tabs-checked--active {
